# xmobar-nix

./: README.md  flake.nix  justfile  myxmobar.cabal
src/: Main.hs
